[package]
name = "fdupes"
version = "0.1.1"
edition = "2021"

[profile.release]
lto = "thin"
opt-level = "s"
strip = true # Only works on *nix systems

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
md5 = "0.7.0"
rayon = "1.5.3"
prettytable-rs = "0.8.0"
